Added email Verification and corrected image Api
